--- a/CarSalesApp1/Views/Shared/_Layout.cshtml
+++ b/CarSalesApp1/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 
     <nav class="navbar navbar-toggleable-md navbar-dark bg-primary align-items-lg-start col-sm-12">
         <a class="navbar-brand col-xs-12 col-sm-12 col-md-8" href="#">
-            <img id="NavCar" src="../MS_Transparent_Background.png" />
+            <img id="NavCar" src="MS_Transparent_Background.png" />
             <h1>Cloud Cars</h1>
         </a>
         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,8 +60,8 @@
         @RenderSection("mainDiv", true)
     </div>
     <footer><p> Copyright Brad Langshaw</p>   </footer>
-    <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
     <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
     <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
