--- a/CarSalesApp1/Views/Shared/_Layout.cshtml
+++ b/CarSalesApp1/Views/Shared/_Layout.cshtml
@@ -60,8 +60,8 @@
         @RenderSection("mainDiv", true)
     </div>
     <footer><p> Copyright Brad Langshaw</p>   </footer>
-    <script src="@Url.Content("/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
+    <script src="~/Scripts/jquery.validate.min.js" type="text/javascript"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js" type="text/javascript"></script>
     <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
     <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
