--- a/CarSalesApp1/Views/Home/Index.cshtml
+++ b/CarSalesApp1/Views/Home/Index.cshtml
@@ -6,13 +6,13 @@
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner" role="listbox">
         <div class="carousel-item active">
-            <img width="1046"  height="402" src="../honda-civic.png" alt="First slide">
+            <img width="1046"  height="402" src="~/Content/Images/honda-civic.png" alt="First slide">
         </div>
         <div class="carousel-item">
-            <img width="1046"  height="402" src="../profile.png" alt="Second slide">
+            <img width="1046"  height="402" src="~/Content/Images/profile.png" alt="Second slide">
         </div>
         <div class="carousel-item">
-            <img width="1046" height="402" src="../Youxia.png" alt="Third slide">
+            <img width="1046" height="402" src="~/Content/Images/Youxia.png" alt="Third slide">
         </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
