--- a/CarSalesApp1/Views/Shared/_Layout.cshtml
+++ b/CarSalesApp1/Views/Shared/_Layout.cshtml
@@ -14,7 +14,11 @@
 
     <nav class="navbar navbar-toggleable-md navbar-dark bg-primary align-items-lg-start col-sm-12">
         <a class="navbar-brand col-xs-12 col-sm-12 col-md-8" href="#">
-            <img id="NavCar" src="~/Home/images/MS_Transparent_Background.png" alt="carlogo"/>
+           @{ var imagePath = "";
+              imagePath = "images\\MS_Transparent_Background.png"];
+               }
+           }
+            <img id="NavCar" src="@imagePath" alt="carlogo" />
             <h1>Cloud Cars</h1>
         </a>
         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
