--- a/CarSalesApp1/Views/Shared/_Layout.cshtml
+++ b/CarSalesApp1/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-toggleable-md navbar-dark bg-primary align-items-lg-start col-sm-12">
         <a class="navbar-brand col-xs-12 col-sm-12 col-md-8" href="#">
            @{ var imagePath = "";
-              imagePath = "images\\MS_Transparent_Background.png"];
+              imagePath = @"images\MS_Transparent_Background.png";
                }
            }
             <img id="NavCar" src="@imagePath" alt="carlogo" />
