--- a/CarSalesApp1/Views/Home/Index.cshtml
+++ b/CarSalesApp1/Views/Home/Index.cshtml
@@ -1,18 +1,26 @@
 ﻿@{
     ViewData["Title"] = "Home";
 }
-
+@{ 
+    var slideimagepath1 = "";
+    var slideimagepath2 = "";
+    var slideimagepath3 = "";
+    slideimagepath1 = @"images/honda-civic.png";
+    slideimagepath2 = @"images/profile.png";
+    slideimagepath3 = @"images/Youxia.png";
+    
+    }
 @section mainDiv{
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner" role="listbox">
         <div class="carousel-item active">
-            <img width="1046"  height="402" src="~/App_Data/images/honda-civic.png" alt="First slide">
+            <img width="1046"  height="402" src="@slideimagepath1" alt="First slide">
         </div>
         <div class="carousel-item">
-            <img width="1046"  height="402" src="~/App_Data/images/profile.png" alt="Second slide">
+            <img width="1046"  height="402" src="@slideimagepath2" alt="Second slide">
         </div>
         <div class="carousel-item">
-            <img width="1046" height="402" src="~/App_Data/images/Youxia.png" alt="Third slide">
+            <img width="1046" height="402" src="@slideimagepath3" alt="Third slide">
         </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
