--- a/CarSalesApp1/Views/Home/Merchandise.cshtml
+++ b/CarSalesApp1/Views/Home/Merchandise.cshtml
@@ -1,54 +1,65 @@
-﻿@{
+﻿@model CarSalesApp1.Merchandise
+@{
     ViewData["Title"] = "Merchandise";
 
-    
+
 }
-    
+
 @section mainDiv {
 
 
-   <div class="container center">
-            <hr />
-            <form method="post" enctype="multipart/form-data" asp-controller="Home" asp-action="Index">
-                <fieldset>
-                    <legend> Merchandise  Form </legend>
-                    <div>
-                        <label>Make / Model</label><br />
-                        <input type="text" name="make" value=@Request.Form["make"] />
-                        @Html.ValidationMessage("make")
-                    </div>
-                    <div>
-                        <label>Style <small>eg. Sedan, Cool, Truck, Van.</small></label><br />
-                        <input type="text" name="style" value=@Request.Form["style"] />
-                        @Html.ValidationMessage("style")
-                    </div>
-                    <div>
-                        <label>Price</label><br />
-                        <input type="text" name="price" value=@Request.Form["price"] />
-                        @Html.ValidationMessage("price")
-                    </div>
+    <div class="container center">
+        <hr />
+
+        @using (Html.BeginForm("Merchandise", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
+        {
+            @Html.AntiForgeryToken()
+            @*<form method="post" asp-controller="Home" asp-action="Store">*@
+            @Html.ValidationSummary(true)
+          <fieldset>
+                <legend> Add Merchandise</legend>
+                <div>
+                    <label>Make / Model</label><br />
+                    @*<input type="text" name="username" value=@Request.Form["username"] />*@
+                    @Html.EditorFor(model => model.make)
+                    @Html.ValidationMessageFor(model => model.make)
+                </div>
+                <div>
+                    <label>Style <small>eg. Sadan, Coop, Van, Truck</small></label><br />
+                    @*<input type="text" name="username" value=@Request.Form["username"] />*@
+                    @Html.EditorFor(model => model.style)
+                    @Html.ValidationMessageFor(model => model.style)
+                </div>
+                <div>
+                    <label>Price</label><br />
+                    @*<input type="text" name="username" value=@Request.Form["username"] />*@
+                    @Html.EditorFor(model => model.price)
+                    @Html.ValidationMessageFor(model => model.price)
+                </div>
                     <div>
                         <label>Engine Type <small>eg. v8, v6, Deisel</small></label><br />
-                        <input type="text" name="engine" value=@Request.Form["engine"] />
-                        @Html.ValidationMessage("engine")
+                        @*<input type="text" name="username" value=@Request.Form["username"] />*@
+                        @Html.EditorFor(model => model.engine)
+                        @Html.ValidationMessageFor(model => model.engine)
                     </div>
                     <div>
                         <label>Image</label><br />
                         @*<input type="file" name="imageURL" accept=".png, .jpg, .jpeg" id="imageURL" />*@
-                        @Html.TextBox("file", "", new { type = "file",  name = "file", accept = ".png, .jpg, .jpeg" })
-                   
+                        @Html.TextBox("file", "", new { type = "file", name = "file", accept = ".png, .jpg, .jpeg" })
+
                         @Html.ValidationMessage("imageurl")
                     </div>
                     <div>
                         <label>Description</label><br />
-                        <input type="text" name="description" value=@Request.Form["description"] />
-                        @Html.ValidationMessage("description")
+                        @Html.EditorFor(model => model.description)
+                        @Html.ValidationMessageFor(model => model.description)
                     </div>
                     <div>
                         <input type="submit" value="submit" class="submit" />
                     </div>
-                </fieldset>
-            </form>
+</fieldset>
+
+
+    }
         </div>
-        }
-   
+}
